removes info links (only FAQ left) and added correct spacing to footer

--- a/src/style/Footer.scss
+++ b/src/style/Footer.scss
@@ -3,7 +3,7 @@
 #footer {
   display: flex;
   flex-direction: column;
-  padding: 20px 15px;
+  padding: 16px;
   border-top: 8px solid #ff4500;
   background-color: #f4f4f4;
 }
@@ -64,7 +64,7 @@
 }
 
 #eduid-navbar li {
-  margin-right: 20px;
+  //  margin-right: 20px;
   // width: 100%;
   // justify-content: space-around;
 }
